--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://chatboot.github.io/style.css">
+    <link rel="stylesheet" type="text/css" href="https://chatboot.github.io/sources/style.css">
     
 </head>
 <body>
@@ -14,7 +14,7 @@
 
     <section>
         <div class="left">
-            <iframe src="widget.html" width="100%"  height="550"  border="0"></iframe>
+            <iframe src="https://chatboot.github.io/sources/widget.html" width="100%"  height="550"  border="0"></iframe>
         </div>
 
         <div class="right">
